# ai-gateway

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  _rewrite.py  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-aws.yml  deploy-azure.yml
docs/: reading-order.md
docs/ai-engineering/: caching-deep-dive.md  cost-analysis.md  cost-tracking-deep-dive.md  gateway-concepts.md  litellm-deep-dive.md  observability-deep-dive.md  rate-limiting-deep-dive.md  testing.md
docs/architecture-and-design/: api-contract.md  api-routes-explained.md  architecture.md  cicd-explained.md  infra-explained.md
docs/architecture-and-design/api-routes/: completions-endpoint-explained.md  embeddings-endpoint-explained.md  health-endpoint-explained.md  models-endpoint-explained.md  usage-endpoint-explained.md
docs/hands-on-labs/: hands-on-labs-config-tuning.md  hands-on-labs-phase-1.md  hands-on-labs-phase-2.md  how-to-read-the-labs.md
docs/reference/: api-reference.md  monitoring.md  pydantic-models.md
docs/setup-and-tooling/: debugging-guide.md  docker-compose-guide.md  getting-started.md  terraform-guide.md
infra/aws/: budget.tf  cloudwatch.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  networking.tf  outputs.tf  rds.tf  terraform.tf  variables.tf
infra/aws/budget_killer_lambda/: handler.py
infra/azure/: budget.tf  container_app.tf  locals.tf  outputs.tf  postgresql.tf  redis.tf  resource_group.tf  terraform.tf  variables.tf
scripts/: run_all_labs.py  run_cloud_labs.sh
src/: config.py  main.py  models.py
src/gateway/: cache.py  cost_tracker.py  rate_limiter.py  router.py
src/middleware/: auth.py  logging.py
src/routes/: completions.py  embeddings.py  health.py  models.py  usage.py
tests/: conftest.py  test_cache.py  test_completions.py  test_cost_tracker.py  test_health.py  test_integration.py  test_rate_limiter.py
